[gd_scene load_steps=6 format=3 uid="uid://bs5ggep43creo"]

[ext_resource type="Texture2D" uid="uid://f4io5xye5p1w" path="res://assets/art.png" id="1_1kaap"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_kad12"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="2_sxish"]

[sub_resource type="AtlasTexture" id="AtlasTexture_17yyy"]
atlas = ExtResource("1_1kaap")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_2exht"]
radius = 6.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_kad12")

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource("2_sxish")

[node name="Sprite" type="Sprite2D" parent="Smoothing2D"]
texture = SubResource("AtlasTexture_17yyy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2exht")

[node name="InteractInputDelayTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ScrollDelayTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="ActionDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
